--- a/LeetCode/21-30/29. 两数相除（中等）.md
+++ b/LeetCode/21-30/29. 两数相除（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[29. 两数相除](https://leetcode-cn.com/problems/divide-two-integers/solution/shua-chuan-lc-er-fen-bei-zeng-cheng-fa-j-m73b/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[29. 两数相除](https://leetcode-cn.com/problems/divide-two-integers/solution/gong-shui-san-xie-dui-xian-zhi-tiao-jian-utb9/)** ，难度为 **中等**。
 
 Tag : 「数学」、「二分」
 
@@ -40,33 +40,49 @@ Tag : 「数学」、「二分」
 
 ---
 
-### 二分 + 倍增乘法
+### 基本分析
 
-由于题目限定了我们不能使用乘法、除法和 mod 运算符。
+主要的歧义在于第三点限制「假设我们的环境只能存储 $32$ 位有符号整数，其数值范围是 $[−2^{31}, 2^{31} − 1]$。本题中，如果除法结果溢出，则返回 $2^{31} − 1$」的理解。
 
-我们可以先实现一个「倍增乘法」，然后利用对于 `x` 除以 `y`，结果 `x / y` 必然落在范围 `[0, x]` 的规律进行二分。
+该限制有两种理解方式：
+
+1. 不限制算法使用 `long`，只是解释为什么在溢出时，返回 $2^{31} − 1$；
+2. 限制算法使用 `long`。
+
+原始题解在 [这里](https://leetcode-cn.com/problems/divide-two-integers/solution/shua-chuan-lc-er-fen-bei-zeng-cheng-fa-j-m73b/) 。
+
+---
+
+### 理解一（不限制 `long`）
+
+当不限制使用 `long` 时，基本思路为：
+
+* 首先，`dividend` 和 `divisor` 均有「正数」和「负数」两种可能，当且仅当其中一者为负数时，结果为负，为了方便，我们可以先记录最终结果的正负号，然后将 `dividend` 和 `divisor` 都当成正数来处理；
+* 现在两者都满足 $x >= 0$，然后利用 `dividend` 和 `divisor` 均为 `int`，可以确定答案的绝对值落在 $[0, dividend]$ 范围内（当且仅当 `divisor` 是范围在 $[0, 1]$ 的浮点数时，答案会大于 `dividend`）；
+* 假设答案为 $x$，那么在以 $x$ 为分割点的整数数轴上，具有「二段性」，因此我们可以二分找到该分割点：
+    * 大于 $x$ 的数 $y$ 满足 $y * b > a$；
+    * 小于等于 $x$ 的数 $y$ 满足 $y * b <= a$；
+* 根据「二段性」分析，我们发现二分的 `check` 实现需要用到乘法，因此我们需要实现一个「不用乘法符号」的乘法实现（这可以使用倍增思想来实现 `mul` 操作）。
 
 代码：
-```Java []
+```Java
 class Solution {
-    public int divide(int a, int b) {
-        long x = a, y = b;
-        boolean isNeg = false;
-        if ((x > 0 && y < 0) || (x < 0 && y > 0)) isNeg = true;
-        if (x < 0) x = -x;
-        if (y < 0) y = -y;
-        long l = 0, r = x;
+    int INF = Integer.MAX_VALUE;
+    public int divide(int _a, int _b) {
+        long a = _a, b = _b;
+        boolean flag = false;
+        if ((a < 0 && b > 0) || (a > 0 && b < 0)) flag = true;
+        if (a < 0) a = -a;
+        if (b < 0) b = -b;
+        long l = 0, r = a;
         while (l < r) {
             long mid = l + r + 1 >> 1;
-            if (mul(mid, y) <= x) {
-                l = mid;
-            } else {
-                r = mid - 1;
-            }
+            if (mul(mid, b) <= a) l = mid;
+            else r = mid - 1;
         }
-        long ans = isNeg ? -l : l;
-        if (ans > Integer.MAX_VALUE || ans < Integer.MIN_VALUE) return Integer.MAX_VALUE;
-        return (int)ans;
+        r = flag ? -r : r;
+        if (r > INF || r < -INF - 1) return INF;
+        return (int)r;
     }
     long mul(long a, long k) {
         long ans = 0;
@@ -79,98 +95,55 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：对 `x` 采用的是二分策略。复杂度为 $O(\log{n})$
+* 时间复杂度：在 $[0, a]$ 范围内二分操作，复杂度为$O(\log{a})$；倍增乘法的与操作数的二进制长度相关，复杂度为 $O(\log{b})$。整体复杂度为 $O(\log{a} * \log{b})$
 * 空间复杂度：$O(1)$
 
 ---
 
-### 总结
+### 理解二（限制 `long`）
 
-这道题的解法，主要涉及的模板有两个。
+对于全程不使用 `long` 的做法，我们需要将所有数映射到负数进行处理（以 $0$ 为分割点，负数所能表示的范围更大）。
 
-一个是「二分」模板，一个是「快速乘法」模板。都是高频使用的模板。
+基本思路为：
 
-其中「二分」模板其实有两套，主要是根据 `check(mid)` 函数为 `true` 时，需要调整的是 `l` 指针还是 `r` 指针来判断。
+* 起始先对边界情况进行特判；
+* 记录最终结果的符号，并将两数都映射为负数；
+* 可以预处理出倍增数组，或采取逐步增大 `dividend` 来逼近 `divisor` 的方式。
 
-* 当 `check(mid) == true` 调整的是 `l` 时：计算 `mid` 的方式应该为 `mid = l + r + 1 >> 1`：
-```Java []
-long l = 0, r = 1000009;
-while (l < r) {
-    long mid = l + r + 1 >> 1;
-    if (check(mid)) {
-        l = mid;
-    } else {
-        r = mid - 1;
+> 由于操作数都是负数，因此自倍增过程中，如果操作数小于 `INT_MIN` 的一半（`-1073741824`），则代表发生溢出。
+
+代码：
+```Java
+class Solution {
+    int MIN = Integer.MIN_VALUE, MAX = Integer.MAX_VALUE;
+    int LIMIT = -1073741824; // MIN 的一半
+    public int divide(int a, int b) {
+        if (a == MIN && b == -1) return MAX;
+        boolean flag = false;
+        if ((a > 0 && b < 0) || (a < 0 && b > 0)) flag = true;
+        if (a > 0) a = -a;
+        if (b > 0) b = -b;
+        int ans = 0;
+        while (a <= b){
+            int c = b, d = -1;
+            while (c >= LIMIT && d >= LIMIT && c >= a - c){
+                c += c; d += d;
+            }
+            a -= c;
+            ans += d;
+        }
+        return flag ? ans : -ans;
     }
 }
 ```
-
-* 当 `check(mid) == true` 调整的是 `r` 时：计算 `mid` 的方式应该为 `mid = l + r >> 1`：
-
-```Java []
-long l = 0, r = 1000009;
-while (l < r) {
-    long mid = l + r >> 1;
-    if (check(mid)) {
-        r = mid;
-    } else {
-        l = mid + 1;
-    }
-}
-```
-
-另外一个是「快速乘法」模板，采用了倍增的思想：
-```Java []
-long mul(long a, long k) {
-    long ans = 0;
-    while (k > 0) {
-        if ((k & 1) == 1) ans += a;
-        k >>= 1;
-        a += a;
-    }
-    return ans;
-}
-```
-
----
-
-### 关于「二分」模板的说明
-
-* **为啥修改左边指针 l 的时候要进行 +1 操作？**
-
-「模板一」的 +1 操作主要是为了避免发生「死循环」，因为 >> 和 直接使用 / 一样，都属于「下取整」操作。
-
-考虑 l = 0, r = 1 的简单情况，如果不 +1 的话，l + r >> 1 等于 0 + 1 / 2，l 仍然是 0，陷入死循环。
-
-
-* **为啥模板不考虑 int 溢出问题？**
-
-事实上，二分模板确实有考虑 int 溢出的写法，评论区我也有提到，但是一般我们不会去用那样的模板，因为太难记了。
-
-而且如果数据范围确实存在 int 溢出的情况，正确的做法是使用 long 数据结构，因为你无法确保只会在「二分」逻辑中进行下标运算，这里改用模板，在别的地方也可能会溢出。
-
-***
-
-### 使用 long 的说明
-
-评论区有小伙伴提醒三叶：**假设我们的环境只能存储 32 位有符号整数，其数值范围是 [$−2^{31}$, $2^{31} − 1$]**
-
-我认为这个提示有两层理解含义：
-
-1. 实现过程中完全不能使用 long
-2. 实现过程不限制使用 long，只是解释为什么某些情况下需要我们返回 $2^{31}$ − 1
-
-在本题，我是按照第二种解释方式进行理解。
-
-当然也可以按照第一种解释方式进行理解，在 [7. 整数反转(简单)](https://leetcode-cn.com/problems/reverse-integer/solution/shua-chuan-lc-bu-wan-mei-jie-fa-wan-mei-919rd/) 中，我就提供了实现过程中不使用 long 的「完美解决」方案。可以看看 ~ 
-
-不使用 long 其实十分简单，只需要将越界判断放到循环里即可，建议你动手试试 ~ 
+* 时间复杂度：$O(\log{a} * \log{b})$
+* 空间复杂度：$O(1)$
 
 ---
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.2` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先将所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.29` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
