--- a/LeetCode/31-40/38. 外观数列（简单）.md
+++ b/LeetCode/31-40/38. 外观数列（简单）.md
@@ -60,103 +60,74 @@ countAndSay(4) = 读 "21" = 一 个 2 + 一 个 1 = "12" + "11" = "1211"
 
 ---
 
-### 朴素解法
+### 模拟
 
-这是一道模拟题。
-
-我们可以实现一个 `nextString` 方法，传入一个字符串 `s`，返回该字符串对应的外观数列。
-
-具体的实现，我们只需要统计字符串 `s` 中每一段连续出现的字符的类型和出现次数即可。
+一个朴素的想法是：根据题意进行模拟，从起始条件 $k = 1$ 时 `ans = "1"` 出发，逐步递推到 $k = n$ 的情况，对于第 $k$ 项而言，其实就是对第 $k - 1$ 项的「连续段」的描述，而求「连续段」长度，可以使用双指针实现。
 
 代码：
-```Java []
+```Java
 class Solution {
     public String countAndSay(int n) {
-        String s = "1";
+        String ans = "1";
         for (int i = 2; i <= n; i++) {
-            s = nextString(s);
-        }
-        return s;
-    }
-    String nextString(String s) {
-        StringBuilder sb = new StringBuilder();
-        int n = s.length();
-        char[] cs = s.toCharArray();
-        char c = cs[0];
-        int cnt = 1;
-        for (int i = 1; i < n; i++) {
-            char cur = cs[i];
-            if (cur == c) {
-                cnt++;
-            } else {
-                sb.append(cnt);
-                sb.append(c);
-
-                c = cur;
-                cnt = 1;
+            String cur = "";
+            int m = ans.length();
+            for (int j = 0; j < m; ) {
+                int k = j + 1;
+                while (k < m && ans.charAt(j) == ans.charAt(k)) k++;
+                int cnt = k - j;
+                cur += cnt + "" + ans.charAt(j);
+                j = k;
             }
+            ans = cur;
         }
-        sb.append(cnt);
-        sb.append(c);
-        return sb.toString();
+        return ans;
     }
 }
 ```
-* 时间复杂度：循环 `n` 次，复杂度为 $O(n)$；每次循环处理一遍当前的 `s` 字符串，复杂度为 $O(n)$ 。整体复杂度为 $O(n^2)$。
+* 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(n)$
 
 ---
 
-### 使用「哨兵技巧」做一些小优化
+### 打表
 
-之前三叶在不少的链表题中为你介绍过「哨兵技巧」，例如 [24. 两两交换链表中的节点（中等）](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247485831&idx=1&sn=9881e540c2c329d211dfb12308a9ce86&chksm=fd9ca298caeb2b8e5120e16462e4b4722cedecdd122d97cf049a2f5f32a0254ca461c660d678&scene=178&cur_album_id=1805384400772087811#rd) 。
+利用数据范围只有 $30$，我们可以使用 `static` 进行打表操作，从而节省掉不同样例之间的「重复」部分的计算量。
 
-**但是「哨兵」可不是只能应用在链表题上，「哨兵」的本质是帮助我们简化边界的判断。**
-
-例如我们上述解法中，就可以使用「哨兵技巧」来简化我们统计的逻辑，避免在循环外统计最后一次字符。
+例如对于 $n = 5$ 和 $n = 6$ 都存在先计算前五项的公共部分，打表可以确保这部分只会被计算一次，同时能够应用到后面项中。
 
 代码：
-```Java []
+```Java
 class Solution {
-    public String countAndSay(int n) {
-        String s = "1";
-        for (int i = 2; i <= n; i++) {
-            s = nextString(s);
-        }
-        return s;
-    }
-    String nextString(String s) {
-        // 往结尾添加一个“哨兵”
-        s = s + "a";
-        StringBuilder sb = new StringBuilder();
-        int n = s.length();
-        char[] cs = s.toCharArray();
-        char c = cs[0];
-        int cnt = 1;
-        for (int i = 1; i < n; i++) {
-            char cur = cs[i];
-            if (cur == c) {
-                cnt++;
-            } else {
-                sb.append(cnt);
-                sb.append(c);
-
-                c = cur;
-                cnt = 1;
+    static String[] f = new String[35];
+    static {
+        f[1] = "1";
+        for (int i = 2; i < 35; i++) {
+            String prev = f[i - 1], cur = "";
+            int m = prev.length();
+            for (int j = 0; j < m; ) {
+                int k = j + 1;
+                while (k < m && prev.charAt(j) == prev.charAt(k)) k++;
+                int cnt = k - j;
+                cur += cnt + "" + prev.charAt(j);
+                j = k;
             }
+            f[i] = cur;
         }
-        return sb.toString();
+    }
+    public String countAndSay(int n) {
+        return f[n];
     }
 }
 ```
-* 时间复杂度：循环 `n` 次，复杂度为 $O(n)$；每次循环处理一遍当前的 `s` 字符串，复杂度为 $O(n)$ 。整体复杂度为 $O(n^2)$。
-* 空间复杂度：$O(n)$
+* 时间复杂度：将打表逻辑到放本地执行，复杂度为 $O(1)$；放到 $OJ$ 执行则为 $O(n^2)$
+* 空间复杂度：$O(C)$
 
 ---
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.38` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先将所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.38` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
