--- a/LeetCode/451-460/453. 最小操作次数使数组元素相等（简单）.md
+++ b/LeetCode/451-460/453. 最小操作次数使数组元素相等（简单）.md
@@ -95,12 +95,12 @@ $$
 class Solution {
     public int minMoves(int[] nums) {
         int n = nums.length;
-        int min = nums[0], sum = 0;
+        long min = nums[0], sum = 0;
         for (int i : nums) {
             min = Math.min(min, i);
             sum += i;
         }
-        return sum - min * n;
+        return (int)(sum - min * n);
     }
 }
 ```
