--- a/LeetCode/221-230/229. 求众数 II（中等）.md
+++ b/LeetCode/221-230/229. 求众数 II（中等）.md
@@ -62,7 +62,7 @@ class Solution {
 
 ### 摩尔投票
 
-在 [（题解）面试题 17.10. 主要元素](https://leetcode-cn.com/problems/find-majority-element-lcci/solution/gong-shui-san-xie-yi-ti-shuang-jie-ha-xi-zkht/) 中，我们使用「摩尔投票」在 $O(1)$ 空间复杂度内找到了出现次数超过一半的元素，即出现次数大于 $n / 2$ 的数。
+在前置 🧀 [简单题学投票算法](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247488987&idx=1&sn=6087b1909fea1d24f15353515eee8d93&chksm=fd9cbec4caeb37d235ccad8d59724177784036a60525fa5e7b738267e9a84a572b1545528391&token=1288276346&lang=zh_CN#rd) 中，我们使用「摩尔投票」在 $O(1)$ 空间复杂度内找到了出现次数超过一半的元素，即出现次数大于 $n / 2$ 的数。
 
 对于本题，我们需要统计出现次数超过 $n / 3$ 的数。
 
