--- a/LeetCode/331-340/335. 路径交叉（困难）.md
+++ b/LeetCode/331-340/335. 路径交叉（困难）.md
@@ -66,7 +66,7 @@ Tag : 「找规律」、「脑筋急转弯」、「模拟」
 
 ![image.png](https://pic.leetcode-cn.com/1635463348-zmNjqd-image.png)
 
-**综上，$d[i]$ 不会与 $d[i - 1]$ 和 $d[i - 2]$ 发生相交，而 $d[i]$ 与 $d[i - 3]$、$d[i - 4]$ 和 $d[i - 5]$ 的相交条件如上述讨论。而 $d[i]$ 不会与 $d[i - x]$ $(x > 5)$ 发生相交的同时，不与 $d[i - y]$ $(3 <= x < 5)$ 发生相交。即 $d[i]$ 与 $d[i - x]$ $(x > 5)$ 发生相交前，必然与 $d[i - y]$ $(3 <= x < 5)$ 发生相交。**
+**综上，$d[i]$ 不会与 $d[i - 1]$ 和 $d[i - 2]$ 发生相交，而 $d[i]$ 与 $d[i - 3]$、$d[i - 4]$ 和 $d[i - 5]$ 的相交条件如上述讨论。并且 $d[i]$ 不会与 $d[i - x]$ $(x > 5)$ 发生相交的同时，不与 $d[i - y]$ $(3 <= y < 5)$ 发生相交。即 $d[i]$ 与 $d[i - x]$ $(x > 5)$ 发生相交前，必然与 $d[i - y]$ $(3 <= y < 5)$ 发生相交。**
 
 代码：
 ```Java
