--- a/LeetCode/211-220/212. 单词搜索 II（困难）.md
+++ b/LeetCode/211-220/212. 单词搜索 II（困难）.md
@@ -4,7 +4,9 @@
 
 Tag : 「回溯算法」、「DFS」、「字典树」
 
-给定一个 m x n 二维字符网格 board 和一个单词（字符串）列表 words，找出所有同时在二维网格和字典中出现的单词。
+
+
+给定一个 $m x n$ 二维字符网格 $board$ 和一个单词（字符串）列表 $words$，找出所有同时在二维网格和字典中出现的单词。
 
 单词必须按照字母顺序，通过 相邻的单元格 内的字母构成，其中“相邻”单元格是那些水平相邻或垂直相邻的单元格。同一个单元格内的字母在一个单词中不允许被重复使用。
 
