--- a/LeetCode/1701-1710/1707. 与数组中元素的最大异或值（困难）.md
+++ b/LeetCode/1701-1710/1707. 与数组中元素的最大异或值（困难）.md
@@ -6,17 +6,13 @@ Tag : 「Trie」、「字典树」、「二分」
 
 
 
+给你一个由非负整数组成的数组 $nums$ 。另有一个查询数组 $queries$，其中 $queries[i] = [xi, mi]$ 。
 
-给你一个由非负整数组成的数组 nums 。另有一个查询数组 queries ，其中 queries[i] = [xi, mi] 。
+第 $i$ 个查询的答案是 $x_i$ 和任何 $nums$ 数组中不超过 $m_i$ 的元素按位异或（XOR）得到的最大值。
 
-第 i 个查询的答案是 xi 和任何 nums 数组中不超过 mi 的元素按位异或（XOR）得到的最大值。
+换句话说，答案是 `max(nums[j] \{XOR} x_i)` ，其中所有 $j$ 均满足 $nums[j] <= m_i$ 。如果 $nums$ 中的所有元素都大于 $m_i$，最终答案就是 $-1$ 。
 
-换句话说，答案是 max(nums[j] XOR xi) ，其中所有 j 均满足 nums[j] <= mi 。如果 nums 中的所有元素都大于 mi，最终答案就是 -1 。
-
-返回一个整数数组 answer 作为查询的答案，其中 answer.length == queries.length 且 answer[i] 是第 i 个查询的答案。
-
-
-
+返回一个整数数组 $answer$ 作为查询的答案，其中 $answer.length == queries.length$ 且 $answer[i]$ 是第 $i$ 个查询的答案。
 
 示例 1：
 ```
@@ -253,7 +249,7 @@ class Solution {
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.1707` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先将所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.1707` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
