--- a/LeetCode/621-630/629. K个逆序对数组（困难）.md
+++ b/LeetCode/621-630/629. K个逆序对数组（困难）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[611. 有效三角形的个数](https://leetcode-cn.com/problems/k-inverse-pairs-array/solution/gong-shui-san-xie-yi-dao-xu-lie-dp-zhuan-tm01/)** ，难度为 **困难**。
+这是 LeetCode 上的 **[629. K个逆序对数组](https://leetcode-cn.com/problems/k-inverse-pairs-array/solution/gong-shui-san-xie-yi-dao-xu-lie-dp-zhuan-tm01/)** ，难度为 **困难**。
 
 Tag : 「序列 DP」、「前缀和」
 
