--- a/LeetCode/491-500/494. 目标和（中等）.md
+++ b/LeetCode/491-500/494. 目标和（中等）.md
@@ -47,7 +47,7 @@ Tag : 「DFS」、「记忆化搜索」、「背包 DP」、「01 背包」
 而 DFS 有「使用全局变量维护」和「接收返回值处理」两种形式。
 
 代码：
-```Java []
+```Java
 class Solution {
     public int findTargetSumWays(int[] nums, int t) {
         return dfs(nums, t, 0, 0);
@@ -62,7 +62,9 @@ class Solution {
     }
 }
 ```
-```Java []
+
+
+```Java
 class Solution {
     int ans = 0;
     public int findTargetSumWays(int[] nums, int t) {
@@ -93,7 +95,7 @@ class Solution {
 以上分析都在 [（题解）403. 青蛙过河](https://leetcode-cn.com/problems/frog-jump/solution/gong-shui-san-xie-yi-ti-duo-jie-jiang-di-74fw/) 完整讲过。
 
 代码：
-```Java []
+```Java
 class Solution {
     public int findTargetSumWays(int[] nums, int t) {
         return dfs(nums, t, 0, 0);
@@ -144,13 +146,13 @@ $$f[i][j] = f[i - 1][j - nums[i - 1]] + f[i - 1][j + nums[i - 1]]$$
 因此，我们可以确定动规数组的大小。**同时在转移时，对第二维度的使用做一个 `s` 的右偏移，以确保「负权值」也能够被合理计算/存储。**
 
 代码：
-```Java []
+```Java
 class Solution {
     public int findTargetSumWays(int[] nums, int t) {
         int n = nums.length;
         int s = 0;
         for (int i : nums) s += Math.abs(i);
-        if (t > s) return 0;
+        if (Math.abs(t) > s) return 0;
         int[][] f = new int[n + 1][2 * s + 1];
         f[0][0 + s] = 1;
         for (int i = 1; i <= n; i++) {
@@ -204,7 +206,7 @@ $$m = \frac{s - target}{2}$$
 $$f[i][j] = f[i - 1][j] + f[i - 1][j - nums[i - 1]]$$
 
 代码：
-```Java []
+```Java
 class Solution {
     public int findTargetSumWays(int[] nums, int t) {
         int n = nums.length;
@@ -232,7 +234,7 @@ class Solution {
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.494` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先将所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.494` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
