--- a/LeetCode/671-680/677. 键值映射（中等）.md
+++ b/LeetCode/671-680/677. 键值映射（中等）.md
@@ -47,7 +47,7 @@ mapSum.sum("ap");           // return 5 (apple + app = 3 + 2 = 5)
 
 * `sum` ： 先对入参 $prefix$ 进行字典树搜索，到达尾部后再使用 `DFS` 搜索后面的所有方案，并累加结果。
 
-代码：
+代码（`static` 优化代码见 $P2$，避免每个样例都 `new` 大数组）：
 ```Java
 class MapSum {
     int[][] tr = new int[2510][26];
@@ -80,8 +80,123 @@ class MapSum {
     }
 }
 ```
+
+
+```Java
+class MapSum {
+    static int[][] tr = new int[2510][26];
+    static int[] hash = new int[2510];
+    static int idx;
+    public MapSum() {
+        for (int i = 0; i <= idx; i++) Arrays.fill(tr[i], 0);
+        Arrays.fill(hash, 0);
+        idx = 0;
+    }
+    public void insert(String key, int val) {
+        int p = 0;
+        for (int i = 0; i < key.length(); i++) {
+            int u = key.charAt(i) - 'a';
+            if (tr[p][u] == 0) tr[p][u] = ++idx;
+            p = tr[p][u];
+        }
+        hash[p] = val;
+    }
+    public int sum(String prefix) {
+        int p = 0;
+        for (int i = 0; i < prefix.length(); i++) {
+            int u = prefix.charAt(i) - 'a';
+            if (tr[p][u] == 0) return 0;
+            p = tr[p][u];
+        }
+        return dfs(p);
+    }
+    int dfs(int p) {
+        int ans = hash[p];
+        for (int u = 0; u < 26; u++) {
+            if (tr[p][u] != 0) ans += dfs(tr[p][u]);
+        }
+        return ans;
+    }
+}
+```
 * 时间复杂度：令 $key$ 的最大长度为 $n$，最大调用次数为 $m$，字符集大小为 $C$（ 本题 $C$ 固定为 $26$ ），`insert` 操作的复杂度为 $O(n)$；从 `DFS` 的角度分析，`sum` 操作的复杂度为 $O(C^n)$，但事实上，对于本题具有明确的计算量上界，搜索所有的格子的复杂度为 $O(n * m * C)$
 * 空间复杂度：$O(n * m * C)$
+
+---
+
+### Trie 记录前缀字符串总和
+
+为降低 `sum` 操作的复杂度，我们可以在 `insert` 操作中同时记录（累加）每个前缀的总和。
+
+代码（`static` 优化代码见 $P2$，避免每个样例都 `new` 大数组）：
+```Java
+class MapSum {
+    int N = 2510;
+    int[][] tr = new int[N][26];
+    int[] hash = new int[N];
+    int idx;
+    Map<String, Integer> map = new HashMap<>();
+    public void insert(String key, int val) {
+        int _val = val;
+        if (map.containsKey(key)) val -= map.get(key);
+        map.put(key, _val);
+        for (int i = 0, p = 0; i < key.length(); i++) {
+            int u = key.charAt(i) - 'a';
+            if (tr[p][u] == 0) tr[p][u] = ++idx;
+            p = tr[p][u];
+            hash[p] += val;
+        }
+    }
+    public int sum(String prefix) {
+        int p = 0;
+        for (int i = 0; i < prefix.length(); i++) {
+            int u = prefix.charAt(i) - 'a';
+            if (tr[p][u] == 0) return 0;
+            p = tr[p][u];
+        }
+        return hash[p];
+    }
+}
+```
+
+
+```Java
+class MapSum {
+    static int N = 2510;
+    static int[][] tr = new int[N][26];
+    static int[] hash = new int[N];
+    static int idx;
+    static Map<String, Integer> map = new HashMap<>();
+    public MapSum() {
+        for (int i = 0; i <= idx; i++) Arrays.fill(tr[i], 0);
+        Arrays.fill(hash, 0);
+        idx = 0;
+        map.clear();
+    }
+    public void insert(String key, int val) {
+        int _val = val;
+        if (map.containsKey(key)) val -= map.get(key);
+        map.put(key, _val);
+        for (int i = 0, p = 0; i < key.length(); i++) {
+            int u = key.charAt(i) - 'a';
+            if (tr[p][u] == 0) tr[p][u] = ++idx;
+            p = tr[p][u];
+            hash[p] += val;
+        }
+    }
+    public int sum(String prefix) {
+        int p = 0;
+        for (int i = 0; i < prefix.length(); i++) {
+            int u = prefix.charAt(i) - 'a';
+            if (tr[p][u] == 0) return 0;
+            p = tr[p][u];
+        }
+        return hash[p];
+    }
+}
+```
+* 时间复杂度：令 $key$ 的最大长度为 $n$，`insert` 操作的复杂度为 $O(n)$；`sum` 操作的复杂度为 $O(n)$
+* 空间复杂度：令 $key$ 的最大长度为 $n$，最大调用次数为 $m$，字符集大小为 $C$（ 本题 $C$ 固定为 $26$ ），复杂度为 $O(n * m * C)$
 
 ---
 
