--- a/LeetCode/391-400/391. 完美矩形（困难）.md
+++ b/LeetCode/391-400/391. 完美矩形（困难）.md
@@ -59,7 +59,7 @@ Tag : 「扫描线」
 
 将每个矩形 $rectangles[i]$ 看做两条竖直方向的边，使用 $(x, y1, y2)$ 的形式进行存储（其中 $y1$ 代表该竖边的下端点，$y2$ 代表竖边的上端点），同时为了区分是矩形的左边还是右边，再引入一个标识位，即以四元组 $(x, y1, y2, flag)$ 的形式进行存储。
 
-一个完美矩形的充要条件为：**对于完美矩形的每一条非边缘的竖边，都「成对」出现（存在两条完全相同的左边和右边）；对于完美矩形的两条边缘竖边，最终必然相连成一条完整的（不重叠）的竖边。**
+一个完美矩形的充要条件为：**对于完美矩形的每一条非边缘的竖边，都「成对」出现（存在两条完全相同的左边和右边重叠在一起）；对于完美矩形的两条边缘竖边，均独立为一条连续的（不重叠）的竖边。**
 
 如图（红色框的为「完美矩形的边缘竖边」，绿框的为「完美矩形的非边缘竖边」）：
 
