--- a/LeetCode/311-320/318. 最大单词长度乘积（中等）.md
+++ b/LeetCode/311-320/318. 最大单词长度乘积（中等）.md
@@ -104,7 +104,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $n$ 为 $words$ 数组的长度，转换出 $masks$ 的复杂度为 $O(\sum_{i = 0}^{i = n - 1}words[i].length)$；得到答案的复杂度为 $O(n^2)$。整体复杂度为 $O(\max(\sum_{i = 0}^{i = n - 1}words[i].length, n^2))$
+* 时间复杂度：令 $n$ 为 $words$ 数组的长度，得到 $map$ 的复杂度为 $O(\sum_{i = 0}^{i = n - 1}words[i].length)$；得到答案的复杂度为 $O(n^2)$。整体复杂度为 $O(\max(\sum_{i = 0}^{i = n - 1}words[i].length, n^2))$
 * 空间复杂度：$O(n)$
 
 ---
